# yairalang

./: .gitignore  README  README.md
configs/: .gitignore  test.conf
sandbox/: logger.c  logger.sh  map.c  map.out  map.sh
yairac/: .gitignore  CMakeLists.txt  Makefile.am  README  autogen.sh  configure.ac
yairac/include/core/: containers.h  memory.h
yairac/include/core/containers/: list.h  map.h  vector.h
yairac/include/core/containers/wrappers/: list.h  map.h  vector.h
yairac/include/core/memory/: free.h  malloc.h  null.h  realloc.h
yairac/include/core/memory/wrappers/: free.h  malloc.h  realloc.h
yairac/source/: main.c
yairac/source/core/containers/: list.c  map.c  vector.c
yairac/source/core/memory/: free.c  malloc.c  realloc.c
yairac/tests/: core_containers_test.c  core_memory_test.c  run.sh
yairac/tests/include/: macros.h  test.h
